styles/links.css
.links-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 100vh;
  padding-inline: 1em;
  overflow: auto;
  margin: auto;
  transition: .2s ease-in-out;
}

.tabs {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-column-gap: .5em;
  place-items: center;
  padding: .5em;
  border: 2px solid var(--light300);
  border-radius: 1em;
  margin-top: 1em;
}

.tab {
  padding: 1em;
  text-align: center;
  border-radius: .5em;
  color: var(--light200);
  cursor: pointer;
  width: 100%;
  transition: .2s ease-in-out;
}

.tabs .active-tab {
  color: var(--light);
  background-color: var(--light300);
}

.layouts {
  display: grid;
  grid-template-rows: 1fr;
  margin-top: 2.5em;
  width: 100%;
}

.professional-layout, .personal-layout {
  max-width: 600px;
  width: 100%;
  margin-inline: auto;
  transition: .2s ease-in-out;
  grid-area: 1/1/1/1;
}

.hide-professional-layout {
  opacity: 0;
  pointer-events: none;
  transform: translateX(-10%);
}

.hide-personal-layout {
  opacity: 0;
  pointer-events: none;
  transform: translateX(10%);
}

.personal-details {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.profile-pic {
  border: 2px solid var(--light300);
  border-radius: 50%;
  width: 7em;
  height: 7em;
}

.profile-pic img {
  width: 100%;
  height: 100%;
}

.name {
  margin-top: 1em;
}

.description {
  margin-top: .5em;
  color: var(--light100);
}

.links {
  margin-top: 3em;
  margin-bottom: 3em;
  width: 100%;
}

.links-list {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.links-list>*+* {
  margin-top: 1em;
}

.link a {
  display: flex;
  flex-direction: row;
  background-color: var(--light400);
  padding: 1em;
  width: 100%;
  border-radius: 1em;
}

.icon-text {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.icon {
  width: 4em;
  height: 4em;
  padding: 1em;
  background-color: var(--light400);
  border-radius: 50%;
  margin-right: 1.5em;
  margin-left: .5em;
}

.icon img {
  width: 100%;
  height: 100%;
}

.link-description {
  color: var(--light200);
}

.link .text {
  display: flex;
  flex-direction: column;
  row-gap: .25em;
}

.footer {
  margin-top: auto;
  margin-bottom: 1em;
}

